[package]
name = "pmd3d_script_runner"
version = "0.1.0"
authors = ["marius851000 <mariusdavid@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlua = "0.17.0"
piston_window = "0.107.0"
#Soon to be published on crates.io
pmd_cpack = "1.0.0"
pmd_wan = "1.0.0"
pmd_pkdpx = "1.1.0"
image = "0.23.2"
log = "0.4"
env_logger = "0.7.1"
