[package]
name = "pmd3d_script_runner"
version = "0.1.0"
authors = ["marius851000 <mariusdavid@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.10.3", features = [ "lua51", "vendored", "macros" ] }
piston_window = "0.132.0"
pmd_cpack = "1.0.0"
pmd_wan = "6.0.0"
pmd_pkdpx = "1.1.0"
image = "0.25.6"
log = "0.4"
env_logger = "0.11.8"
drain_filter_polyfill = "0.1.3"
